@@ -169,6 +169,33 @@
 
 
   void
+  FTDemo_Display_Gamma_Change( FTDemo_Display*  display,
+                               int              dir )
+  {
+    if ( dir > 0 )
+    {
+      if ( display->gamma == 0.0 )
+        display->gamma  = 2.3;
+      else if ( 2.25 - 0.1 < display->gamma && display->gamma < 2.25 )
+        display->gamma  = 0.0;  /* sRGB */
+      else if ( display->gamma < 2.95 )
+        display->gamma += 0.1;
+    }
+    else if ( dir < 0 )
+    {
+      if ( display->gamma == 0.0 )
+        display->gamma  = 2.2;
+      else if ( 2.25 + 0.1 > display->gamma && display->gamma > 2.25 )
+        display->gamma  = 0.0;  /* sRGB */
+      else if ( display->gamma > 0.35 )
+        display->gamma -= 0.1;
+    }
+
+    grSetTargetGamma( display->bitmap, display->gamma );
+  }
+
+
+  void
   FTDemo_Display_Done( FTDemo_Display*  display )
   {
     if ( !display )
