@@ -910,20 +910,6 @@
 
 
   static void
-  event_gamma_change( double  delta )
-  {
-    display->gamma += delta;
-
-    if ( display->gamma > 3.0 )
-      display->gamma = 3.0;
-    else if ( display->gamma < 0.0 )
-      display->gamma = 0.0;
-
-    grSetTargetGamma( display->bitmap, display->gamma );
-  }
-
-
-  static void
   event_fw_change( int  delta )
   {
     int  i = status.fw_idx;
@@ -1357,12 +1343,12 @@
       break;
 
     case grKEY( 'g' ):
-      event_gamma_change( 0.1 );
+      FTDemo_Display_Gamma_Change( display,  1 );
       status.update = 1;
       break;
 
     case grKEY( 'v' ):
-      event_gamma_change( -0.1 );
+      FTDemo_Display_Gamma_Change( display, -1 );
       status.update = 1;
       break;
 
